<resources>
    <string name="app_name">DucatusApp</string>
    <string name="ducat">DUCAT</string>
    <string name="us">US</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up.small">Sign up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>

    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_password.header">CHANGE PASSWORD</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>

    <string name="account_existing">Already have an account?</string>

    <string name="settings">Settings</string>
    <string name="edit_personal_details">Edit personal details</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>

    <string name="hellomsg">Hello There!</string>
    <string name="warning_text">Budget must be higher than to spend amount</string>

    <string name="tip1">Be organized</string>
    <string name="tip2">Don\'t eat out</string>
    <string name="tip3">Lessen your energy consumption</string>
    <string name="tip4">Stay at home</string>
    <string name="tip5">Track your expenses</string>
</resources>