<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="25dp"
    android:background="?attr/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/sign_up"
            android:textColor="?attr/primaryTextColor"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/username"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvUserReg"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/username"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textPersonName"
            android:textColor="?attr/secondaryTextColor" />

        <TextView
            android:id="@+id/tvEmailReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/email"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvEmailReg"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/email"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textEmailAddress"
            android:textColor="?attr/secondaryTextColor" />

        <TextView
            android:id="@+id/tvPassReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/password"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvPassReg"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/password"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textPassword"
            android:textColor="?attr/secondaryTextColor" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/quicksand"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvAccountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="?attr/secondaryTextColor"
                android:text="@string/account_existing" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/quicksand"
                android:textSize="16sp"
                android:textColor="?attr/primaryTextColor"
                android:textStyle="bold"
                android:text="@string/log_in" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>