<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="?attr/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/resetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/reset_password"
            android:textColor="?attr/primaryTextColor"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/email"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="?attr/hintTextColor" />

        <TextView
            android:id="@+id/tvNewPassReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/new_password"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvNewPassReset"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:textColorHint="?attr/hintTextColor"
            android:fontFamily="@font/quicksand"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tvConfirmNewPassReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/confirm_new_password"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvConfirmNewPassReset"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/confirm_new_password"
            android:textColorHint="?attr/hintTextColor"
            android:fontFamily="@font/quicksand"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnResetPass"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/quicksand"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/border_secondary_button"
            android:fontFamily="@font/quicksand"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>