<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="25dp"
    android:background="?attr/bg"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:background="?attr/bg"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/settings"
                android:textColor="?attr/primaryTextColor"
                android:textSize="30sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="326dp"
                android:background="?attr/bg"
                app:srcCompat="@drawable/ic_baseline_account_circle_24" />

            <TextView
                android:id="@+id/tvUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:fontFamily="@font/roboto"
                android:text="John Doe"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/editPersonalDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/tvUser"
                android:layout_marginStart="70dp"
                android:layout_marginBottom="-20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/edit_personal_details"
                android:textColor="?attr/secondaryTextColor" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/RLSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_dark_mode_24" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/dark_mode"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp" />

            <Switch
                android:id="@+id/switcher"
                android:layout_width="67dp"
                android:layout_height="18dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="6.5dp"
                android:layout_toEndOf="@+id/textView9" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_lock_24" />

            <TextView
                android:id="@+id/tvChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/change_password"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="46dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_logout_24" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto"
                android:text="@string/logout"
                android:textColor="?attr/primaryTextColor"
                android:textSize="18sp" />
        </RelativeLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>