<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogIn"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="25dp"
    android:background="?attr/bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/log_in"
            android:textColor="?attr/primaryTextColor"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvUserLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/username"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvUserLog"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/username"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textPersonName"
            android:textColor="?attr/secondaryTextColor" />

        <TextView
            android:id="@+id/tvPassLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand"
            android:text="@string/password"
            android:textColor="?attr/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etvPassLog"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/quicksand"
            android:hint="@string/password"
            android:textColorHint="?attr/hintTextColor"
            android:inputType="textPassword"
            android:textColor="?attr/secondaryTextColor" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/border_button"
            android:fontFamily="@font/quicksand"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/quicksand"
                android:text="@string/forgot_password"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvCreateAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_weight="0"
                android:fontFamily="@font/quicksand"
                android:text="@string/create_an_account"
                android:textColor="?attr/secondaryTextColor"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>