<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:layout_marginTop="25dp"
    android:background="?attr/bg"
    tools:context=".ChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:background="@drawable/rectangle_change_password"
            android:fontFamily="@font/quicksand"
            android:gravity="center_vertical"
            android:text="Change Password"
            android:textAlignment="center"
            android:textColor="#F9F3F3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="291dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/etvCurrentPass"
                android:layout_width="291dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/current_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="?attr/colorControlNormal"
                android:textColorHint="?attr/colorControlNormal"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imgPassVisibility1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="243dp"
                android:layout_marginTop="3.5dp"
                android:background="#00FFFFFF"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_visibility_off" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="291dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/etvNewPass"
                android:layout_width="291dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="?attr/colorControlNormal"
                android:textColorHint="?attr/colorControlNormal"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imgPassVisibility2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="243dp"
                android:layout_marginTop="3.5dp"
                android:background="#00FFFFFF"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_visibility_off" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="291dp"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center">

            <EditText
                android:id="@+id/etvConfNewPass"
                android:layout_width="291dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:longClickable="false"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="?attr/colorControlNormal"
                android:textColorHint="?attr/colorControlNormal"
                android:textSize="16sp" />

            <ImageButton
                android:id="@+id/imgPassVisibility3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="243dp"
                android:layout_marginTop="3.5dp"
                android:background="#00FFFFFF"
                android:minWidth="48dp"
                android:minHeight="48dp"
                app:srcCompat="@drawable/ic_visibility_off" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:background="@drawable/border_change_password"
            android:fontFamily="@font/roboto"
            android:text="@string/change_password"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="291dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@drawable/border_logout"
            android:fontFamily="@font/roboto"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>